update staff manager
Co-Authored-By: Duong Manh Huy <176552369+MHuy21@users.noreply.github.com>
Co-Authored-By: Nguyen Duc Manh <179661149+MrRoyal00@users.noreply.github.com>
Co-Authored-By: Nguyễn Phương Thảo <191190030+Pthao4@users.noreply.github.com>
Co-Authored-By: Tanh1625 <dotuananh1625@gmail.com>